--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>To-dos</h1>
+    <img src="sky.jpg">
     <input id="search-todo" type="text" placeholder="Search Todo Here!">
     <label>
         <input id="hide-completed" type="checkbox"> Hide Completed
